Makefile and docker controller
