# docs/swagger.json
@@ -27,7 +27,7 @@
                 "tags": [
                     "calculator"
                 ],
-                "summary": "get calculation",
+                "summary": "Calculate",
                 "parameters": [
                     {
                         "type": "string",
@@ -44,6 +44,26 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/calculate/history": {
+            "get": {
+                "description": "get the latest calculations from cache",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "calculator"
+                ],
+                "summary": "Calculation History",
                 "responses": {
                     "200": {
                         "description": "OK",
